--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>NETFLIX<span class="first">1</span></h1>
-     <div class="banner">SWETHA</div>
+     <div class="banner"></div>
   <section>
     <h1> K-DRAMAS</h1> 
      <div class="posters">
@@ -59,7 +59,7 @@
                 alt="" class="poster">
                 <h3>VINCENZO</h3>
                 </div>
-        <div class="new">https:
+        <div class="new">
         <img src="https://occ-0-4619-2186.1.nflxso.net/dnm/api/v6/Qs00mKCpRvrkl3HZAN5KwEL1kpE/AAAABWA2sb_Ldx-ORWIh8z-1McEdMxfAjnFYTedKdZRKaO2uCdOLuc6enxKO58FDap1_cQGuvzXz9ZNKPUnECBotgnL-zFUiwhhhxDPK5KxzgpqprPC7Vhs80KqMtnzrYQJBn2hJ.jpg?r=667"
                 alt="" class="poster">
                 <h3>DOCTOR CHA</h3>
