--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWETHAMMU</title>
+    <title>SWETHAAMMU</title>
     <link rel="stylesheet" href="Portfolio.css">
 </head>
 
