--- a/k-dramas/swetha.html
+++ b/k-dramas/swetha.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="swetha.css">
 </head>
 <body>
-    <div class="bannercontent" img></div>
-      <div class="bannertittle"><img src="https://occ-0-1009-448.1.nflxso.net/dnm/api/v6/tx1O544a9T7n8Z_G12qaboulQQE/AAAABf1CkVizj0Bx09p3-nQYSJ4lR7ProXayv-GNQgLRFj0T2gh7e-bafwrqNY2lUs72jTrstA3h3EhG2zMB4twTeOoiI6s94yXCtwRpcezBeVJ4rxMxdx3hO_-TOh6N4VfICPojRH8h3cKbPkH1hziUZ1rblxXRj0HnkN5kF9vpa_PJ2ozdtTVm3g.png?r=570" alt="" ><h1> JANNE JAAN</h1></div>
-   
+<div class="banner">
+<div class="bannercontent" >
+<div class="bannertittle"><img src="https://occ-0-1009-448.1.nflxso.net/dnm/api/v6/tx1O544a9T7n8Z_G12qaboulQQE/AAAABf1CkVizj0Bx09p3-nQYSJ4lR7ProXayv-GNQgLRFj0T2gh7e-bafwrqNY2lUs72jTrstA3h3EhG2zMB4twTeOoiI6s94yXCtwRpcezBeVJ4rxMxdx3hO_-TOh6N4VfICPojRH8h3cKbPkH1hziUZ1rblxXRj0HnkN5kF9vpa_PJ2ozdtTVm3g.png?r=570" alt="" ><h1> JANNE JAAN</h1>
+<h5><span class="title-info-metadata-item item-year" data-uia="item-year">2023</span>|
+<span class="maturity-number">U/A 16+ </span>|
+<span class="duration">2h 19m</span>|
+<span class="type">thriller</span>
+</h5>
+<div class="para" data-uia="para">
+
+    <div class="para" data-uia="para">When a single mother is caught in a crime investigation, her neighbor...a gifted math teacher...offers to help and a relentless cop digs into the case.</div>
+<div class="cast"><div class="cast">
+<span class="label">Starring:</span>
+<span class="list" data-uia="cast">Kareena Kapoor, Jaideep Ahlawat, Vijay Varma</span>
+ </div>
+</div>
+</div>
+</div>
+</div>
+</div> 
 </body>
 </html>
