--- a/k-dramas/swetha.html
+++ b/k-dramas/swetha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SWETHA</title>
+    <title>WETHA</title>
     <link rel="stylesheet" href="swetha.css">
 </head>
 <body>
